# ggxrd_hitbox_overlay_2211

./: .gitignore  .gitmodules  CheckModuleIsLoaded.cpp  CheckModuleIsLoadedTester.cpp  Find RunInitThread.cpp  GGXrdLaunchWaiter.cpp  LICENSE  MyPixelShader.hlsl  README.md  TODO.txt  determine_mod_version.py  frames_card.fla  ggxrd_hitbox.sln  ggxrd_hitbox_overlay.ini  icon.xcf  launch_ggxrd_hitbox_injector_linux.sh  low profile presets.txt  performance metrics for transparency screenshotting.txt  regenerate_ini_and_update_readme.ps1  regenerate_ini_and_update_readme.py  stringEqualToRingBuffer.cpp  texture dump.cpp  wait_for_xrd_to_launch.bat
common/: ConsoleEmulator.cpp  ConsoleEmulator.h  InjectorCommonOut.cpp  InjectorCommonOut.h  WError.h  WinError.cpp  WinError.h  const_obfuscate.h  ggxrd_hitbox_injector_common.cpp  ggxrd_hitbox_injector_common.h  ggxrd_hitbox_injector_common_old.cpp  ggxrd_hitbox_patcher_common.cpp  ggxrd_hitbox_patcher_common.h  prebuild.ps1  prebuild.py
d3d9/: LICENSE - COPY OF LIBS PROHIBITED.txt
ggxrd_hitbox_patcher/: CMakeLists.txt  GNUmakefile  PatcherVersion.h  README.md  ggxrd_hitbox_patcher.cpp  ggxrd_hitbox_patcher.rc  ggxrd_hitbox_patcher.vcxproj  ggxrd_hitbox_patcher.vcxproj.filters  ggxrd_hitbox_patcher_linux  prebuild.ps1  prebuild.py  resource.h  unpatcher.py
ggxrd_hitbox_patcher_console/: CMakeLists.txt  PatcherConsoleVersion.h  README.md  ggxrd_hitbox_patcher_console.cpp  ggxrd_hitbox_patcher_console.rc  ggxrd_hitbox_patcher_console.vcxproj  ggxrd_hitbox_patcher_console.vcxproj.filters  pch.h  prebuild.ps1  resource.h
(+205 files in other folders)
